# cookiecutter-py-package

./: .cookiecutter.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  NOTES.md  README.md  SETUP.md  cookiecutter.json  determine.py  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-main.yml  check-pr.yml  ci.yml
determine-cuteness/: setup.py
determine-cuteness/determine_cuteness/: __init__.py
determine-cuteness/tests/: test_determine.py
docs/: conf.py  index.rst  installation.rst
hooks/: post_gen_project.sh
python_boilerplate/: __init__.py
python_boilerplate/tests/: test_example.py
{{ cookiecutter.project_slug }}/: .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  README.md  SETUP.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{ cookiecutter.project_slug }}/.github/workflows/: build-docs.yml  build-main.yml  check-pr.yml  ci.yml  docs.yml
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst  installation.rst  make.bat
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_slug }}/: __init__.py  example.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_slug }}/tests/: __init__.py  test_example.py
